UAT_AllStar_8Jan2024_0636/Backup-Source/objects/Phoenix_PHS_Price_Change_Line__c.object
<CustomObject>
    <fields>
        <fullName>Apexus_Sub_Ceiling_Price_Change_Required__c</fullName>
        <label>Apexus Sub-Ceiling Price Change Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Change_in_Price__c</fullName>
        <label>% Change in Price</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contracts_Approval_Remarks__c</fullName>
        <label>Contracts Approval Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contracts_Approval__c</fullName>
        <label>Contracts Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Diff_in_Apexus_Sub_Ceiling_Price__c</fullName>
        <label>Diff in Apexus Sub-Ceiling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Final_Finance_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Finance Head Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Final_Status__c</fullName>
        <label>Final Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Finance_Approval_Remarks__c</fullName>
        <label>Finance Head Approval Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Finance_Approval__c</fullName>
        <label>Finance Head Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Rejection_Noti_All_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Rejection Notification To All Sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Last_90_days_PHS_Units__c</fullName>
        <label>Last 90 days PHS Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Material_Code__c</fullName>
        <label>Material Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_NDC_11__c</fullName>
        <label>NDC-11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_New_PHS_Price__c</fullName>
        <label>New PHS Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Old_PHS_Price__c</fullName>
        <label>Old PHS Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_PHS_Line_Item_Approval_Status__c</fullName>
        <label>PHS Line Item Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Supply Chain Pending</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Closed-Contracts</fullName>
                </value>
                <value>
                    <fullName>Closed-Country Head</fullName>
                </value>
                <value>
                    <fullName>Closed-Customer&apos;s Update</fullName>
                </value>
                <value>
                    <fullName>Closed-Customer Service</fullName>
                </value>
                <value>
                    <fullName>Closed-Draft</fullName>
                </value>
                <value>
                    <fullName>Closed-Finance</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing &amp; Finance</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing Head</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing Lead</fullName>
                </value>
                <value>
                    <fullName>Closed-Marketing Lead SRx</fullName>
                </value>
                <value>
                    <fullName>Closed-Sales &amp; Marketing Head</fullName>
                </value>
                <value>
                    <fullName>Closed-SCM &amp; Marketing</fullName>
                </value>
                <value>
                    <fullName>Closed-Sr Director or VP Finance</fullName>
                </value>
                <value>
                    <fullName>Closed-SRx IPA Contracts Approver</fullName>
                </value>
                <value>
                    <fullName>Closed-Supply Chain</fullName>
                </value>
                <value>
                    <fullName>Closed-Vistex Update</fullName>
                </value>
                <value>
                    <fullName>Contracts Pending</fullName>
                </value>
                <value>
                    <fullName>Contracts Rejected</fullName>
                </value>
                <value>
                    <fullName>Country Head Pending</fullName>
                </value>
                <value>
                    <fullName>Country Head Rejected</fullName>
                </value>
                <value>
                    <fullName>Customer&apos;s Update Pending</fullName>
                </value>
                <value>
                    <fullName>Customer&apos;s Update Rejected</fullName>
                </value>
                <value>
                    <fullName>Customer Service Pending</fullName>
                </value>
                <value>
                    <fullName>Customer Service Rejected</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Finance Pending</fullName>
                </value>
                <value>
                    <fullName>Finance Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_PHS_Price_Change__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PHS Price Change</label>
        <referenceTo>Phoenix_PHS_Price_Change__c</referenceTo>
        <relationshipLabel>PHS Price Change Lines</relationshipLabel>
        <relationshipName>PHS_Price_Change_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Price_End_Date__c</fullName>
        <label>Price End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Price_Start_Date__c</fullName>
        <label>Price Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>PHS Price Change Lines</relationshipLabel>
        <relationshipName>PHS_Price_Change_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Provisional_PHS_Price__c</fullName>
        <label>Provisional PHS Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Sales_Difference__c</fullName>
        <label>Sales Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Vistex_Approval_Remarks__c</fullName>
        <label>Vistex Approval Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Vistex_Approval__c</fullName>
        <label>Vistex Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <isActive>false</isActive>
                    <label>Approved</label>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                    <isActive>false</isActive>
                    <label>Not Approved</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Vistex_Final_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vistex Final Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_in_Apexus_Sub_Ceiling_Contract__c</fullName>
        <label>Price in Apexus Sub-Ceiling Contract</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PHS Price Change Line</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_Product_Name__c</columns>
        <columns>Phoenix_Material_Code__c</columns>
        <columns>Phoenix_NDC_11__c</columns>
        <columns>Phoenix_Provisional_PHS_Price__c</columns>
        <columns>Phoenix_Old_PHS_Price__c</columns>
        <columns>Phoenix_New_PHS_Price__c</columns>
        <columns>Phoenix_Change_in_Price__c</columns>
        <columns>Phoenix_Sales_Difference__c</columns>
        <columns>Price_in_Apexus_Sub_Ceiling_Contract__c</columns>
        <columns>Phoenix_Diff_in_Apexus_Sub_Ceiling_Price__c</columns>
        <columns>Apexus_Sub_Ceiling_Price_Change_Required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phoenix_PHS_Price_Change__c</field>
            <operation>equals</operation>
            <value>Test</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PHS-{000000}</displayFormat>
        <label>PHS Price Change Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PHS Price Change Lines</pluralLabel>
    <recordTypes>
        <fullName>Phoenix_Provisional_PHS_Price</fullName>
        <active>true</active>
        <label>Provisional PHS Price</label>
    </recordTypes>
    <recordTypes>
        <fullName>Phoenix_Quarterly_PHS_Price</fullName>
        <active>true</active>
        <label>Quarterly PHS Price</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>